# template-test

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: format.yml  github-actions-helixqac.yml
eo_module/include/: eo_module.h
eo_module/src/: eo_module.c
